# reservacIA

./: .env.example  .gitignore  README.md  pyproject.toml  resenas.md  run.sh
app/: codes.py  config.py  crud.py  db.py  main.py  middleware.py  models.py  security.py
app/notifications/: __init__.py  notifier.py  queue.py  templates.py  worker.py
app/routers/: auth.py  debug.py  notifications.py  reservations.py  reviews.py  rooms.py  tables.py
docs/: confirmation-code.md
scripts/: backfill_spanish.py  import_resenas.py  seed.py  seed_rooms.py  seed_tables.py
tests/: conftest.py  test_auth.py  test_confirmation_code.py  test_ip_allowlist.py  test_notifications.py  test_reservations.py  test_reviews.py  test_rooms.py  test_security_middleware.py  test_tables.py
